Alignments fixed for Mobile view

--- a/frontend/src/app/admin/account-settings/account-settings.component.scss
+++ b/frontend/src/app/admin/account-settings/account-settings.component.scss
@@ -1,58 +1,72 @@
 .container {
-    margin: 20px;
+  margin: 20px;
 
-    button {
-        background-color: black;
-    }
+  button {
+    background-color: black;
+  }
 }
 
 form {
-    button {
-        background-color: rgb(35, 33, 33);
-    }
+  button {
+    background-color: rgb(35, 33, 33);
+  }
 
-    label {
-        color: black
-    }
+  label {
+    color: black
+  }
 }
 
 .card {
-    margin-top: 20px;
-    padding: 10px;
-    width: 50%;
-    height: fit-content;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin-top: 20px;
+  padding: 10px;
+  width: 50%;
+  height: fit-content;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
-    h3 {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
+  h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
 
-    p {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+  p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-    button {
-        width: fit-content;
-        background-color: rgb(22, 21, 21);
-    }
+  button {
+    width: fit-content;
+    background-color: rgb(22, 21, 21);
+  }
 }
 
 
 
 .checkbox {
-    border: 1px rgb(37, 34, 34) solid;
-    height: fit-content;
-    width: 60%;
-    padding: 10px;
-    margin: 10px;
+  border: 1px rgb(37, 34, 34) solid;
+  height: fit-content;
+  width: 60%;
+  padding: 10px;
+  margin: 10px;
 
-    b {
-        color: black
-    }
+  b {
+    color: black
+  }
 
 }
 
 .account {
-    width: 50%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 50%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+@media only screen and (max-width: 760px) {
+  .card {
+    width: 100%;
+  }
+  .checkbox {
+    width: 100%;
+  }
+  .account {
+    width: 100%;
+  }
+
+}
+
